# PVD

./: .gitignore  1.txt  README.md  lerobot_v6_requirements.txt
SO-ARM_ROS2_URDF/: CMakeLists.txt  README.md  package.xml
calibration_backup/robots/so_follower/: ghost_follower.json
calibration_backup/teleoperators/so_leader/: ghost_leader.json
calibration_backup_ship/robots/so_follower/: my_so101_follower.json
calibration_backup_v051/teleoperators/so_leader/: my_leader.json
share/: my_follower.json
so_arm_ws/src/: so_arm_description
so_arm_ws/src/so_arm_viz/: package.xml  setup.cfg  setup.py
so_arm_ws/src/so_arm_viz/launch/: bringup.launch.py  display.launch.py  ghost.launch.py  live.launch.py  rollout_viz.launch.py
so_arm_ws/src/so_arm_viz/rviz/: so_arm.rviz  so_arm_ghost.rviz
so_arm_ws/src/so_arm_viz/scripts/: ghost_rollout.py  run_encoder.sh  run_ghost_rollout.sh  test_chunk_bridge.py
so_arm_ws/src/so_arm_viz/so_arm_viz/: chunk_publisher.py  common.py  demo_chunk_pub.py  encoder_node.py  ghost_replay_node.py  ghost_urdf.py
